2016-01-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCsymt.c,
	  src/SDCCval.c,
	  doc/sdccman.lyx:
	  Make char unsigned by default.

2016-01-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdlib.h:
	  Fix declaration of aligned_alloc() for C11.

2016-02-01 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	  Fix a bug: type mismatch between function definition and declaration.
	* support/regression/tests/bug-2419.c
	  Add a new test case.

2016-01-31 Molnar Karoly <molnarkaroly AT users.sf.net>

	* src/pic14/device.c,
	  src/pic14/gen.c,
	  src/pic14/glue.c,
	  src/pic14/pcode.c,
	  src/pic14/pcodepeep.c,
	  src/pic14/ralloc.c,
	  src/pic16/device.c,
	  src/pic16/device.h,
	  src/pic16/gen.c,
	  src/pic16/genarith.c,
	  src/pic16/genutils.c,
	  src/pic16/glue.c,
	  src/pic16/glue.h,
	  src/pic16/graph.c,
	  src/pic16/main.c,
	  src/pic16/pcode.c,
	  src/pic16/pcode.h,
	  src/pic16/pcodepeep.c,
	  src/pic16/ralloc.c,
	  src/pic16/ralloc.h:
	  Use "Safe_alloc(...)" instead of "Safe_calloc(1, ...)".
	  Use SNPRINTF(X, sizeof(X), ...) instead of sprintf(X, ...).
	  Some code simplification, e.g.:
	    sprintf (s, "%s", aop->aopu.aop_dir);
	    rs = Safe_calloc (1, strlen (s) + 1);
	    strcpy (rs, s);
	    return rs;
	      .
	      .
	      .
	    return Safe_strdup(aop->aopu.aop_dir);

2016-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in:
	  Change handling of test filenames for regression tests, patch #266 by Peter Dons Tychsen.
	* src/SDCCast.c,
	  support/regression/tests/bug-2458.c:
	  Changed result type propagation for logic operations, variant of proposed fix by Peter Dons Tychsen for bug #2458.

2016-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Fix handling of __z88dk_fastcall in specifier merging.

2016-01-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (strVal): free utf_8 and suppress warning
